# Stitch

./: .gitignore  Cargo.toml  README.md
examples/: README.md
scripts/: example.sh
src/: arg_parse.rs  main.rs
