[package]
name = "stitch"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
crossterm = "0.26.0"
swc = { version = "0.245.28", features = ["node"] }
